# projeul

./: .clang-format  .clang-tidy  .ctags  .gitignore  .travis.yml  CMakeLists.txt  annotate.h  clang.toolchain.cmake  failed_pe60.cpp  googlemock.cmake  gtpe40.cpp  main.cpp  nqpe40.cpp  num_utils.cpp  pe.hpp  pe27.cpp  pe27.hpp  pe29.cpp  pe29.hpp  pe30.cpp  pe30.hpp  pe31.cpp  pe31.hpp  pe32.cpp  pe32.hpp  pe33.cpp  pe33.hpp  pe34.cpp  pe34.hpp  pe35.cpp  pe35.hpp  pe36.cpp  pe36.hpp  pe37.cpp  pe37.hpp  pe38.cpp  pe38.hpp  pe39.cpp  pe39.hpp  pe40.cpp  (+63 more)
accumulator/: CMakeLists.txt  accumulator.hpp  accumulator_tests.cpp
ansi/: CMakeLists.txt  ansi_demo.cpp  escapes.cpp  escapes.hpp
aoc/: 01_1.cpp  01_2.cpp  02_1.cpp  02_2.cpp  05_1.cpp  06_1.cpp  06_2.cpp  07_1.cpp  07_2.cpp  08_1.cpp  08_2.cpp  09_1.cpp  10_1.cpp  11_1.cpp  12_1.cpp  13_1.cpp  14_1.cpp  14_2.cpp  15_1.cpp  16_1.cpp  CMakeLists.txt  computer.cpp  computer.hpp  coord.cpp  coord.hpp  map.cpp  map.hpp  path_def.hpp
aoc/2019/: 01_1.cpp  01_2.cpp  03_1.cpp  03_2.cpp  04_1.cpp  04_2.cpp  05_1.cpp  06_1.cpp  06_2.cpp  07_2.cpp  08_1.cpp  08_2.cpp  09_1.cpp  10_1.cpp  11_1.cpp  12_1.cpp  13_1.cpp  14_1.cpp  14_2.cpp  15_1.cpp  16_1.cpp  17_1.cpp  18_1.cpp  CMakeLists.txt
aoc/2020/: 01_1.cpp  02_1.cpp  03_1.cpp  04_1.cpp  05_1.cpp  06_1.cpp  07_1.cpp  08_1.cpp  09_1.cpp  10_1.cpp  11_1.cpp  12_1.cpp  13_1.cpp  14_1.cpp  15_1.cpp  16_1.cpp  17_1.cpp  19_1.cpp  CMakeLists.txt
aoc/2022/: 01_1.cpp  02_1.cpp  03_1.cpp  04_1.cpp  05_1.cpp  06_1.cpp  07_1.cpp  08_1.cpp  09_1.cpp  10_1.cpp  11_1.cpp  12_1.cpp  13_1.cpp  14_1.cpp  CMakeLists.txt
aoc/2023/: 01_1.cpp  02_1.cpp  03_1.cpp  04_1.cpp  05_1.cpp  CMakeLists.txt
aoc/2024/: 01_1.cpp  02_1.cpp  03_1.cpp  04_1.cpp  05_1.cpp  06_1.cpp  07_1.cpp  08_1.cpp  09_1.cpp  10_1.cpp  11_1.cpp  13_1.cpp  14_1.cpp  15_1.cpp  16_1.cpp  CMakeLists.txt
aoc/2025/: 01_1.cpp  02_1.cpp  03_1.cpp  04_1.cpp  05_1.cpp  06_1.cpp  07_1.cpp  08_1.cpp  CMakeLists.txt
aoc2020/: 01_1.cpp  CMakeLists.txt
asio/: CMakeLists.txt  asio_context.cpp  asio_context.hpp  user_input.cpp  user_input.hpp
auth/: CMakeLists.txt  main.cpp
boost_version_poc/: CMakeLists.txt  boost_version_poc.cpp
chunker/: CMakeLists.txt  main.cpp
cigsmoke/: CMakeLists.txt  agent.cpp  agent.hpp  main.cpp  material.hpp  smoker.cpp  smoker.hpp  table.cpp  table.hpp
data/: notes.txt  pe89_sroman.txt
dinphi/: CMakeLists.txt  main.cpp
exercises/: CMakeLists.txt  failed_pe60.cpp  gtpe40.cpp  nqpe40.cpp  pe.hpp  pe27.cpp  pe27.hpp  pe29.cpp  pe29.hpp  pe30.cpp  pe30.hpp  pe31.cpp  pe31.hpp  pe32.cpp  pe32.hpp  pe33.cpp  pe33.hpp  pe34.cpp  pe34.hpp  pe35.cpp  pe35.hpp  pe36.cpp  pe36.hpp  pe37.cpp  pe37.hpp  pe38.cpp  pe38.hpp  pe39.cpp  pe39.hpp  pe40.cpp  pe40.hpp  pe41.cpp  pe41.hpp  pe42.cpp  pe42.hpp  pe43.cpp  pe43.hpp  pe44.cpp  pe44.hpp  pe45.cpp  (+86 more)
fmt_poc/: CMakeLists.txt  fmt_poc.cpp
leetcode/: 001_two_sum.cpp  002_add_two_numbers.cpp  003_longest_substring_without_repeating_characters.cpp  004_median_sorted_arrays.cpp  005_longest_palindromic_substring.cpp  006_zigzag_conversion.cpp  007_reverse_integer.cpp  008_string_to_integer_atoi.cpp  009_palindrome_number.cpp  010_regular_expression_matching.cpp  CMakeLists.txt
log_file_stream/: CMakeLists.txt  log_file_next.txt  log_file_small.txt  log_file_small2.txt  log_file_stream.cpp
mdinphi/: CMakeLists.txt  diner.cpp  diner.hpp  main.cpp  table.cpp  table.hpp
messenger/: CMakeLists.txt  main.cpp
number_lists/: CMakeLists.txt  hexagonal_numbers.cpp  hexagonal_numbers.hpp  pentagonal_numbers.cpp  pentagonal_numbers.hpp  polygonal_numbers.cpp  polygonal_numbers.hpp  prime_sieve.cpp  prime_sieve.hpp  pyth_triples.cpp  pyth_triples.hpp  triangle_numbers.cpp  triangle_numbers.hpp
oathstuff/: CMakeLists.txt  config.cpp  config.hpp  display.cpp  display.hpp  key_data.cpp  key_data.hpp  main.cpp
pentagonal_numbers/: CMakeLists.txt  pentagonal_numbers.cpp  pentagonal_numbers.hpp
pings/: CMakeLists.txt  main.cpp
poker/: CMakeLists.txt  card.cpp  card.hpp  poker.cpp  poker.hpp
prime_sieve/: CMakeLists.txt  prime_sieve.cpp
profile/: CMakeLists.txt  calc_prime_factors_profile.cpp  triangle_numbers_profile.cpp
quoted/: CMakeLists.txt  quoted.cpp
resolver/: CMakeLists.txt  main.cpp
rlpoc/: CMakeLists.txt  rlpoc.cpp
rulez/: CMakeLists.txt  main.cpp
scratch/: CMakeLists.txt  dirent_poc.cpp  dreturn.cpp  exmult.cpp  move_zeroes.cpp  readbuf.cpp  reverse_even.cpp  smallest_common.cpp  trapped_water.cpp
scripts/: lcov_gen.sh
signal_handler/: CMakeLists.txt  signal_handler.cpp  signal_handler.hpp
sorts/: CMakeLists.txt  qsort.cpp
spirit/: CMakeLists.txt  main.cpp
sudoku/: CMakeLists.txt  cli_main.cpp  grid.cpp  grid.hpp  grid_reader.cpp  grid_reader.hpp  main.cpp  p096_sudoku_difficult.txt  p096_sudoku_example.txt  p096_sudoku_training.txt  solver.cpp  solver.hpp  solver_main.cpp  square.cpp  square.hpp  util.cpp  util.hpp
sudoku/test/: CMakeLists.txt  sudoku_test.cpp  test_solved_sudoku.txt  test_unsolved_sudoku.txt
test/: CMakeLists.txt  bint_test.cpp  card_test.cpp  continued_fraction_test.cpp  crypto_test.cpp  gint_test.cpp  hexagonal_numbers_test.cpp  known_primes.cpp  known_primes.cpp2  known_primes.hpp  main.cpp  pentagonal_numbers_test.cpp  poker_test.cpp  polygonal_numbers_test.cpp  prime_sieve_test.cpp  pyth_triples_test.cpp  shit_test.cpp  signal_handler_test.cpp  triangle_numbers_test.cpp  unique_cptr_test.cpp  utils_test.cpp
timezone/: CMakeLists.txt  something  timezone.cpp
triangle_numbers/: CMakeLists.txt  triangle_numbers.cpp  triangle_numbers.hpp
utils/: CMakeLists.txt  bint.cpp  bint.hpp  crypto.cpp  crypto.hpp  gint.cpp  gint.hpp  main.cpp  unique_cptr.hpp  utils.cpp  utils.hpp
wancurses/: CMakeLists.txt  cfire.cpp  cfire.py  example.cpp  main.cpp  window_border.cpp
ws/: CMakeLists.txt  greeter.sh  main.cpp  send_receive.sh
