
add_executable ( 001_two_sum 001_two_sum.cpp )
add_executable ( 002_add_two_numbers 002_add_two_numbers.cpp )
add_executable ( 003_longest_substring_without_repeating_characters
                 003_longest_substring_without_repeating_characters.cpp )
add_executable ( 004_median_sorted_arrays 004_median_sorted_arrays.cpp )
add_executable ( 005_longest_palindromic_substring 005_longest_palindromic_substring.cpp )
add_executable ( 006_zigzag_conversion 006_zigzag_conversion.cpp )
add_executable ( 007_reverse_integer 007_reverse_integer.cpp )
