
add_compile_definitions(PROJEUL_AOC_PATH="${CMAKE_CURRENT_SOURCE_DIR}")

link_libraries(Boost::lexical_cast Boost::algorithm Boost::multiprecision)
add_executable ( aoc_2024_01_1 01_1.cpp )
add_executable ( aoc_2024_02_1 02_1.cpp )
add_executable ( aoc_2024_03_1 03_1.cpp )
add_executable ( aoc_2024_04_1 04_1.cpp )
add_executable ( aoc_2024_05_1 05_1.cpp )
add_executable ( aoc_2024_06_1 06_1.cpp )
add_executable ( aoc_2024_07_1 07_1.cpp )
add_executable ( aoc_2024_08_1 08_1.cpp )
add_executable ( aoc_2024_09_1 09_1.cpp )
add_executable ( aoc_2024_10_1 10_1.cpp )
add_executable ( aoc_2024_11_1 11_1.cpp )
add_executable ( aoc_2024_13_1 13_1.cpp )
